--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re;Birth Studio|官網首頁</title>
     <link rel="stylesheet" href="styles.css">
+    <!--SEO-->
+    <meta name="title" content="Re;Birth Studio官網">
+    <meta name="description" content="">
+    <meta name="keywords" content="vtuber,工作室,台V,虛擬主播,Re;Birth">
+    <meta name="copyright" content="Re;Birth Studio">
+    <meta name="author" content="Minato Baiyun"><!--https://github.com/alicezuber-->
+    <meta name="distribution" content="zh-TW">
+    <meta name="revised" content="2024/05/23">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <!--OG設定-->
     <meta property="og:url" content="你的網址"/>
     <meta property="og:locale" content="zh_TW" />
     <meta property="og:title" content="Re;Birth Studio|官網首頁">
     <meta property="og:description" content="Re;Birth Studio的官網首頁連結">
+    <!--X-->
+    <meta property="twitter:title" content="Re;Birth Studio|官網首頁">
+    <meta property="twitter:image" content="">
+    <meta property="twitter:description" content="Re;Birth Studio的官網首頁連結">
+    <meta property="twitter:card" content="">
+    <meta property="twitter:site" content="Re;Birth Studio">
 </head>
 <body>
     <header>
@@ -130,10 +145,10 @@
         <section class="social">
             <div class="YT">
 
-                <h5>尚未連接</h5>
+                <iframe frameborder="0" src="https://www.youtube.com/subscribe_embed?usegapi=1&amp;channel=@Ninaka41287&amp;layout=滿的&amp;theme=黑暗的&amp;count=default&amp;origin=https%3A%2F%2Fdevelopers-dot-devsite-v2-prod.appspot.com&amp;gsrc=3p&amp;ic=1&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.en.6Uw6xjIGoH8.O%2Fam%3DwQE%2Fd%3D1%2Fct%3Dzgms%2Frs%3DAGLTcCOCpwZBnKr4AHjJwpr6PLObYk6mnA%2Fm%3D__features__#_methods=onPlusOne%2C_ready%2C_close%2C_open%2C_resizeMe%2C_renderstart%2Concircled%2Cdrefresh%2Cerefresh&amp;id=I24_1605603829828&amp;_gfid=I24_1605603829828&amp;parent=https%3A%2F%2Fdevelopers-dot-devsite-v2-prod.appspot.com&amp;pfname=&amp;rpctoken=19901795" class="blocky" arxtgu9wl=""></iframe><script type="text/javascript" src="https://www.embedista.com/j/ytchannel.js"></script><div id="ytroot"></div><div class="ytfollow" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>
             </div>
             <div class="X">
-                <h5>尚未連接</h5>
+                <a class="twitter-timeline" data-height="1000" data-theme="dark" href="https://twitter.com/puresti2050?ref_src=twsrc%5Etfw">Tweets by puresti2050</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
             <div class="FB">
                 <h5>尚未連接</h5>
