--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <!--SEO-->
     <meta name="title" content="Re;Birth Studio官網">
-    <meta name="description" content="">
+    <meta name="description" content="Re;Birth Studio的官網首頁連結">
     <meta name="keywords" content="vtuber,工作室,台V,虛擬主播,Re;Birth">
     <meta name="copyright" content="Re;Birth Studio">
     <meta name="author" content="Minato Baiyun"><!--https://github.com/alicezuber-->
@@ -145,7 +145,7 @@
         <section class="social">
             <div class="YT">
 
-                <iframe frameborder="0" src="https://www.youtube.com/subscribe_embed?usegapi=1&amp;channel=@Ninaka41287&amp;layout=滿的&amp;theme=黑暗的&amp;count=default&amp;origin=https%3A%2F%2Fdevelopers-dot-devsite-v2-prod.appspot.com&amp;gsrc=3p&amp;ic=1&amp;jsh=m%3B%2F_%2Fscs%2Fapps-static%2F_%2Fjs%2Fk%3Doz.gapi.en.6Uw6xjIGoH8.O%2Fam%3DwQE%2Fd%3D1%2Fct%3Dzgms%2Frs%3DAGLTcCOCpwZBnKr4AHjJwpr6PLObYk6mnA%2Fm%3D__features__#_methods=onPlusOne%2C_ready%2C_close%2C_open%2C_resizeMe%2C_renderstart%2Concircled%2Cdrefresh%2Cerefresh&amp;id=I24_1605603829828&amp;_gfid=I24_1605603829828&amp;parent=https%3A%2F%2Fdevelopers-dot-devsite-v2-prod.appspot.com&amp;pfname=&amp;rpctoken=19901795" class="blocky" arxtgu9wl=""></iframe><script type="text/javascript" src="https://www.embedista.com/j/ytchannel.js"></script><div id="ytroot"></div><div class="ytfollow" data-width="" data-layout="" data-action="" data-size="" data-share="true"></div>
+            
             </div>
             <div class="X">
                 <a class="twitter-timeline" data-height="1000" data-theme="dark" href="https://twitter.com/puresti2050?ref_src=twsrc%5Etfw">Tweets by puresti2050</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
