--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Re;Birth Studio|官網首頁</title>
-    
+
+    <link rel="icon" href="assest/img/web.ico" type="image/x-icon" />
     <script src="assest/js/scripts.js"></script>
     <!--SEO-->
     <meta name="title" content="Re;Birth Studio官網">
@@ -20,9 +21,10 @@
     <meta property="og:locale" content="zh_TW" />
     <meta property="og:title" content="Re;Birth Studio|官網首頁">
     <meta property="og:description" content="Re;Birth Studio的官網首頁連結">
+    <meta property="og:image" content="assest/img/logo.png">
     <!--X-->
     <meta property="twitter:title" content="Re;Birth Studio|官網首頁">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="assest/img/logo.png">
     <meta property="twitter:description" content="Re;Birth Studio的官網首頁連結">
     <meta property="twitter:card" content="">
     <meta property="twitter:site" content="Re;Birth Studio">
